Cloud, General, Linux, Networking

--- a/index.html
+++ b/index.html
@@ -184,12 +184,24 @@
             Terraform</span></a></p>
         </li>
         <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/Terraform/K8S-Storage.html"><span class="bold">Hands-on Kubernetes
+            Storage</span></a></p>
+        </li>
+        <li>
           <p><a target="_blank" href="https://polarsparc.github.io/Cloud/Vault.html"><span class="bold">Hands-on with HashiCorp Vault
             </span></a></p>
         </li>
         <li>
           <p><a target="_blank" href="https://polarsparc.github.io/Cloud/Envoy.html"><span class="bold">Introduction to Envoy</span>
             </a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/Cloud/Practical-K8S-N2.html"><span class="bold">Practical Kubernetes
+            on ODroid-N2 Cluster (ARM Edition)</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/Cloud/Kubernetes.html"><span class="bold">Introduction to Kubernetes
+            (ARM Edition)</span></a></p>
         </li>
         <li>
           <p><a target="_blank" href="https://polarsparc.github.io/Cloud/Consul.html"><span class="bold">Hands-on with Consul</span></a></p>
@@ -470,6 +482,10 @@
             Raspberry Pi 5 Build</span></a></p>
         </li>
         <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/General/RFID.html"><span class="bold">Hands-On with RFID/NFC</span>
+            </a></p>
+        </li>
+        <li>
           <p><a target="_blank" href="https://www.linkedin.com/pulse/mindset-aha-moment-bhaskar-swaminathan-chumc"><span class="bold">
             Mindset - An 'Aha' Moment !</span></a></p>
         </li>
@@ -633,6 +649,10 @@
           <p><a target="_blank" href="https://polarsparc.github.io/Linux/eBPF.html"><span class="bold">Hands-on with eBPF</span></a></p>
         </li>
         <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/Linux/VirtualBox-CLI.html"><span class="bold">VirtualBox VMs using
+            CLI</span></a></p>
+        </li>
+        <li>
           <p><a target="_blank" href="https://polarsparc.github.io/Linux/Linux-Capabilities.html"><span class="bold">Linux Capabilities
             Unraveled</span></a></p>
         </li>
@@ -647,6 +667,10 @@
         <li>
           <p><a target="_blank" href="https://polarsparc.github.io/Linux/Containers-1.html"><span class="bold">Building a Linux
             Container using Namespaces :: Part - 1</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/Linux/Linux-KVM.html"><span class="bold">Introduction to Linux
+            Virtualization using KVM</span></a></p>
         </li>
       </ul>
     </div>
@@ -819,6 +843,11 @@
     <br/>
     <div id="para-div">
       <ul id="blue-sqr-ul">
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/Networking/IPFS-Intro.html"><span class="bold">Introduction to
+            InterPlanetary File System (IPFS)</span>
+          </a></p>
+        </li>
         <li>
           <p><a target="_blank" href="https://polarsparc.github.io/Networking/NMAP.html"><span class="bold">Hands-on with Nmap</span>
           </a></p>
