Java, Linux, Security

--- a/index.html
+++ b/index.html
@@ -597,6 +597,10 @@
           <p><a target="_blank" href="https://polarsparc.github.io/Java/Java-Modules-1.html"><span class="bold">Introduction to the
             Java Platform Module System - Part 1</span></a></p>
         </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/Java/JPA.html"><span class="bold">Quick Introduction to Java Persistence
+            API (JPA)</span></a></p>
+        </li>
       </ul>
     </div>
     <div id="step-div">
@@ -669,8 +673,32 @@
             Container using Namespaces :: Part - 1</span></a></p>
         </li>
         <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/Linux/Linux-Firewalld.html"><span class="bold">Introduction to
+            Linux firewalld</span></a></p>
+        </li>
+        <li>
           <p><a target="_blank" href="https://polarsparc.github.io/Linux/Linux-KVM.html"><span class="bold">Introduction to Linux
             Virtualization using KVM</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/Linux/Linux-inxi.html"><span class="bold">Linux Command :: inxi
+            </span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/Linux/Vagrant-2.html"><span class="bold">Introduction to Vagrant
+            - Part 2</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/Linux/Vagrant-1.html"><span class="bold">Introduction to Vagrant
+            - Part 1</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/Linux/Linux-lshw.html"><span class="bold">Linux Command :: lshw
+            </span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/Linux/Linux-LXC.html"><span class="bold">Introduction to Linux
+            Containers (LXC)</span></a></p>
         </li>
       </ul>
     </div>
@@ -911,6 +939,26 @@
         <li>
           <p><a target="_blank" href="https://polarsparc.github.io/Security/Chisel-Tunnel.html"><span class="bold">Tunneling with
             Chisel</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/Security/Exploring-SSL-TLS-3.html"><span class="bold">Exploring
+            SSL/TLS - Part 3</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/Security/Exploring-SSL-TLS-2.html"><span class="bold">Exploring
+            SSL/TLS - Part 2</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/Security/Exploring-SSL-TLS-1.html"><span class="bold">Exploring
+            SSL/TLS - Part 1</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/Security/Kerberos.html"><span class="bold">How Kerberos Authentication
+            Works</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/Security/GPG.html"><span class="bold">Secure Data Communications
+            Using GNU Privacy Guard (GPG)</span></a></p>
         </li>
       </ul>
     </div>
