General, Java, Messaging, Python

--- a/index.html
+++ b/index.html
@@ -498,6 +498,18 @@
             Digital Format</span></a></p>
         </li>
         <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/General/AirTag.html"><span class="bold">How Does an Apple AirTag
+            Work</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/General/BluetoothLE.html"><span class="bold">Introduction to Bluetooth
+            Low Energy (BLE)</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/General/Hard-Drive-Rescue.html"><span class="bold">Failed Hard Drive
+            Rescue</span></a></p>
+        </li>
+        <li>
           <p><a target="_blank" href="https://polarsparc.github.io/General/Pi-Hole.html"><span class="bold">Pi-hole using Docker on
             ODroid-C2</span></a></p>
         </li>
@@ -596,6 +608,22 @@
         <li>
           <p><a target="_blank" href="https://polarsparc.github.io/Java/Java-Modules-1.html"><span class="bold">Introduction to the
             Java Platform Module System - Part 1</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/Java/CompletableFuture-4.html"><span class="bold">Java CompletableFuture
+            :: Part 4</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/Java/CompletableFuture-3.html"><span class="bold">Java CompletableFuture
+            :: Part 3</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/Java/CompletableFuture-2.html"><span class="bold">Java CompletableFuture
+            :: Part 2</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/Java/CompletableFuture-1.html"><span class="bold">Java CompletableFuture
+            :: Part 1</span></a></p>
         </li>
         <li>
           <p><a target="_blank" href="https://polarsparc.github.io/Java/JPA.html"><span class="bold">Quick Introduction to Java Persistence
@@ -827,6 +855,46 @@
       </ul>
     </div>
     <div id="step-div">
+      <p>Messaging</p>
+    </div>
+    <br/>
+    <div id="para-div">
+      <ul id="blue-sqr-ul">
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/Messaging/Kafka-2.html"><span class="bold">Exploring Apache Kafka
+            - Part 2</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/Messaging/Kafka-1.html"><span class="bold">Exploring Apache Kafka
+            - Part 1</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/Messaging/RabbitMQ-3.html"><span class="bold">Quick Tour of RabbitMQ
+            - Part 3</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/Messaging/RabbitMQ-2.html"><span class="bold">Quick Tour of RabbitMQ
+            - Part 2</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/Messaging/RabbitMQ-1.html"><span class="bold">Quick Tour of RabbitMQ
+            - Part 1</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/Messaging/ZooKeeper-3.html"><span class="bold">Exploring Apache
+            ZooKeeper :: Part-3</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/Messaging/ZooKeeper-2.html"><span class="bold">Exploring Apache
+            ZooKeeper :: Part-2</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/Messaging/ZooKeeper-1.html"><span class="bold">Exploring Apache
+            ZooKeeper :: Part-1</span></a></p>
+        </li>
+      </ul>
+    </div>
+    <div id="step-div">
       <p>MinIO</p>
     </div>
     <br/>
@@ -911,6 +979,18 @@
         <li>
           <p><a target="_blank" href="https://polarsparc.github.io/Python/Pydantic.html"><span class="bold">Hands-on with Pydantic</span>
             </a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/Python/Flask-3.html"><span class="bold">Web Applications using
+            Python Flask - Part III</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/Python/Flask-2.html"><span class="bold">Web Applications using
+            Python Flask - Part II</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/Python/Flask-1.html"><span class="bold">Web Applications using
+            Python Flask - Part I</span></a></p>
         </li>
         <li>
           <p><a target="_blank" href="https://polarsparc.github.io/Python/Requests.html"><span class="bold">Hands-on with Python
