Data, Distributed, Java, Networking

--- a/Data/SQLAlchemy-3.html
+++ b/Data/SQLAlchemy-3.html
@@ -37,7 +37,7 @@
       <p>Overview</p>
     </div>
     <div id="para-div">
-      <p>In <a href="https://polarsparc.github.io/BigData/SQLAlchemy-2.html" target="_blank"><span class="bold">Part - 2</span></a>
+      <p>In <a href="https://polarsparc.github.io/Data/SQLAlchemy-2.html" target="_blank"><span class="bold">Part - 2</span></a>
         of this series, we began exploring the basics of the the Object Relational Mapping (<span class="hi-blue">ORM</span>)
         layer for interacting with <span class="bold">PostgreSQL</span> database, as well as introduced the one-to-many
         relationship between the <span class="bold">customer</span> and <span class="bold">account</span> entities.</p>
@@ -48,9 +48,9 @@
       <p>Hands-on with SQLAlchemy ORM Relationships</p>
     </div>
     <div id="para-div">
-      <p>In <a href="https://polarsparc.github.io/BigData/SQLAlchemy-1.html" target="_blank"><span class="bold">Part - 1</span></a>,
+      <p>In <a href="https://polarsparc.github.io/Data/SQLAlchemy-1.html" target="_blank"><span class="bold">Part - 1</span></a>,
         we created a simple database table called <span class="hi-yellow">customer</span> and in
-        <a href="https://polarsparc.github.io/BigData/SQLAlchemy-2.html" target="_blank"><span class="bold">Part - 2</span></a>,
+        <a href="https://polarsparc.github.io/Data/SQLAlchemy-2.html" target="_blank"><span class="bold">Part - 2</span></a>,
         we created another simple database table called <span class="hi-yellow">account</span> with a one-to-many relationship
         between them. In this demonstration, we will create yet another database table called <span class="hi-yellow">kyc</span>
         with a one-to-one relationship with both the <span class="bold">account</span> and <span class="bold">customer</span>
@@ -341,7 +341,7 @@ if __name__ == "__main__":
 2020-04-24 21:36:17,931 - [Kyc: kyc_flag=True, kyc_update_dt=2020-04-24 20:11:35.501991, customer=Doctor, account=Alice Trade Account]</pre>
     </div>
     <div id="para-div">
-      <p>In <a href="https://polarsparc.github.io/BigData/SQLAlchemy-1.html" target="_blank"><span class="bold">Part - 1</span></a>,
+      <p>In <a href="https://polarsparc.github.io/Data/SQLAlchemy-1.html" target="_blank"><span class="bold">Part - 1</span></a>,
         we created a simple database table called <span class="hi-yellow">securities</span>. In this demonstration, we will
         create another database table called <span class="hi-yellow">trades</span> with a many-to-many relationship with both
         the <span class="bold">account</span> and <span class="bold">securities</span> tables. In other words, the database
@@ -574,8 +574,8 @@ FROM trades JOIN account ON account.acct_no = trades.aid JOIN securities ON secu
       <p>References</p>
     </div>
     <div id="para-div">
-      <p><a href="https://polarsparc.github.io/BigData/SQLAlchemy-1.html" target="_blank"><span class="bold">Introduction to SQLAlchemy :: Part - 1</span></a></p>
-      <p><a href="https://polarsparc.github.io/BigData/SQLAlchemy-2.html" target="_blank"><span class="bold">Introduction to SQLAlchemy :: Part - 2</span></a></p>
+      <p><a href="https://polarsparc.github.io/Data/SQLAlchemy-1.html" target="_blank"><span class="bold">Introduction to SQLAlchemy :: Part - 1</span></a></p>
+      <p><a href="https://polarsparc.github.io/Data/SQLAlchemy-2.html" target="_blank"><span class="bold">Introduction to SQLAlchemy :: Part - 2</span></a></p>
       <p><a href="https://docs.sqlalchemy.org/en/13/orm/tutorial.html" target="_blank"><span class="bold">SQLAlchemy Object Relational Tutorial</span></a></p>
       <p><a href="https://www.sqlalchemy.org/" target="_blank"><span class="bold">SQLAlchemy</span></a></p>
       <p><a href="https://www.pythonsheets.com/notes/python-sqlalchemy.html" target="_blank"><span class="bold">PySheet SQLAlchemy</span></a></p>
