--- a/Distributed/Kafka-2.html
+++ b/Distributed/Kafka-2.html
@@ -23,7 +23,7 @@
     <p>Overview</p>
   </div>
   <div id="para-div">
-    <p>In <a href="http://polarsparc.github.io/Messaging/Kafka-1.html" target="_blank"><span class="bold">Part-1</span></a>
+    <p>In <a href="http://polarsparc.github.io/Distributed/Kafka-1.html" target="_blank"><span class="bold">Part-1</span></a>
       of this series, we setup <span class="bold">Apache Kafka</span> using <span class="bold">Docker</span> and
       demonstrated the messaging semantics using the provided command-line tools for the <span class="bold">Producer</span>
       and the <span class="bold">Consumer</span>.</p>
@@ -864,12 +864,12 @@ public class MyKafkaConsumerApp3 {
     <p>References</p>
   </div>
   <div id="para-div">
-    <p><a href="https://polarsparc.github.io/Messaging/Kafka-1.html" target="_blank"><span class="bold">Exploring Apache Kafka - Part 1</span></a></p>
+    <p><a href="https://polarsparc.github.io/Distributed/Kafka-1.html" target="_blank"><span class="bold">Exploring Apache Kafka - Part 1</span></a></p>
     <p><a href="https://docs.confluent.io/current/" target="_blank"><span class="bold">Confluent Apache Kafka</span></a></p>
     <p><a href="http://polarsparc.github.io/Docker/Docker.html" target="_blank"><span class="bold">Introduction to Docker</span></a></p>
-    <p><a href="https://polarsparc.github.io/Messaging/ZooKeeper-1.html" target="_blank"><span class="bold">Exploring Apache ZooKeeper :: Part-1</span></a></p>
-    <p><a href="https://polarsparc.github.io/Messaging/ZooKeeper-2.html" target="_blank"><span class="bold">Exploring Apache ZooKeeper :: Part-2</span></a></p>
-    <p><a href="https://polarsparc.github.io/Messaging/ZooKeeper-3.html" target="_blank"><span class="bold">Exploring Apache ZooKeeper :: Part-3</span></a></p>
+    <p><a href="https://polarsparc.github.io/Distributed/ZooKeeper-1.html" target="_blank"><span class="bold">Exploring Apache ZooKeeper :: Part-1</span></a></p>
+    <p><a href="https://polarsparc.github.io/Distributed/ZooKeeper-2.html" target="_blank"><span class="bold">Exploring Apache ZooKeeper :: Part-2</span></a></p>
+    <p><a href="https://polarsparc.github.io/Distributed/ZooKeeper-3.html" target="_blank"><span class="bold">Exploring Apache ZooKeeper :: Part-3</span></a></p>
   </div>
 </body>
 </html>
