--- a/Distributed/RabbitMQ-2.html
+++ b/Distributed/RabbitMQ-2.html
@@ -23,7 +23,7 @@
     <p>Overview</p>
   </div>
   <div id="para-div">
-    <p>Continuing from <a href="http://polarsparc.github.io/Messaging/RabbitMQ-1.html" target="_blank"><span class="bold">
+    <p>Continuing from <a href="http://polarsparc.github.io/Distributed/RabbitMQ-1.html" target="_blank"><span class="bold">
       Part-1</span></a> of this series, we will demonstrate the <span class="hi-yellow">Fanout</span>
       <span class="bold">Exchange</span> type in this part.</p>
   </div>
@@ -486,7 +486,7 @@ INFO: Received credit-card message (body): {
     <p>References</p>
   </div>
   <div id="para-div">
-    <p><a href="http://polarsparc.github.io/Messaging/RabbitMQ-1.html" target="_blank">
+    <p><a href="http://polarsparc.github.io/Distributed/RabbitMQ-1.html" target="_blank">
       <span class="bold">Quick Tour of RabbitMQ - Part 1</span></a></p>
     <p><a href="https://www.rabbitmq.com" target="_blank"><span class="bold">RabbitMQ Official Site</span></a></p>
   </div>
