--- a/Distributed/RabbitMQ-3.html
+++ b/Distributed/RabbitMQ-3.html
@@ -23,7 +23,7 @@
     <p>Overview</p>
   </div>
   <div id="para-div">
-    <p>Continuing from <a href="http://polarsparc.github.io/Messaging/RabbitMQ-2.html" target="_blank"><span class="bold">
+    <p>Continuing from <a href="http://polarsparc.github.io/Distributed/RabbitMQ-2.html" target="_blank"><span class="bold">
       Part-2</span></a> of this series, we will demonstrate the <span class="hi-yellow">Topic</span>
       <span class="bold">Exchange</span> type in this final part of the series.</p>
   </div>
@@ -353,9 +353,9 @@ INFO: Received deal alert message (body): deal.tech.laptop,Dell 15.6 i7 16GB,899
     <p>References</p>
   </div>
   <div id="para-div">
-    <p><a href="http://polarsparc.github.io/Messaging/RabbitMQ-1.html" target="_blank">
+    <p><a href="http://polarsparc.github.io/Distributed/RabbitMQ-1.html" target="_blank">
       <span class="bold">Quick Tour of RabbitMQ - Part 1</span></a></p>
-    <p><a href="http://polarsparc.github.io/Messaging/RabbitMQ-2.html" target="_blank">
+    <p><a href="http://polarsparc.github.io/Distributed/RabbitMQ-2.html" target="_blank">
       <span class="bold">Quick Tour of RabbitMQ - Part 2</span></a></p>
     <p><a href="https://www.rabbitmq.com" target="_blank"><span class="bold">RabbitMQ Official Site</span></a></p>
   </div>
