--- a/index.html
+++ b/index.html
@@ -235,28 +235,32 @@
     <div id="para-div">
       <ul id="blue-sqr-ul">
         <li>
-          <p><a target="_blank" href="https://polarsparc.github.io/BigData/SQLAlchemy-3.html"><span class="bold">Introduction to
+          <p><a target="_blank" href="https://polarsparc.github.io/Data/SQLAlchemy-3.html"><span class="bold">Introduction to
             SQLAlchemy :: Part - 3</span></a></p>
         </li>
         <li>
-          <p><a target="_blank" href="https://polarsparc.github.io/BigData/SQLAlchemy-2.html"><span class="bold">Introduction to
+          <p><a target="_blank" href="https://polarsparc.github.io/Data/SQLAlchemy-2.html"><span class="bold">Introduction to
             SQLAlchemy :: Part - 2</span></a></p>
         </li>
         <li>
-          <p><a target="_blank" href="https://polarsparc.github.io/BigData/SQLAlchemy-1.html"><span class="bold">Introduction to
+          <p><a target="_blank" href="https://polarsparc.github.io/Data/SQLAlchemy-1.html"><span class="bold">Introduction to
             SQLAlchemy :: Part - 1</span></a></p>
         </li>
         <li>
-          <p><a target="_blank" href="https://polarsparc.github.io/BigData/ApacheCalcite.html"><span class="bold">Introduction to Apache
+          <p><a target="_blank" href="https://polarsparc.github.io/Data/ApacheCalcite.html"><span class="bold">Introduction to Apache
             Calcite</span></a></p>
         </li>
         <li>
-          <p><a target="_blank" href="https://polarsparc.github.io/BigData/ApacheDrill.html"><span class="bold">Introduction to Apache
+          <p><a target="_blank" href="https://polarsparc.github.io/Data/ApacheDrill.html"><span class="bold">Introduction to Apache
             Drill</span></a></p>
         </li>
         <li>
-          <p><a target="_blank" href="https://polarsparc.github.io/BigData/ApacheParquet.html"><span class="bold">Introduction to Apache
+          <p><a target="_blank" href="https://polarsparc.github.io/Data/ApacheParquet.html"><span class="bold">Introduction to Apache
             Parquet</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/Data/ApacheAvro.html"><span class="bold">Introduction to Apache
+            Avro</span></a></p>
         </li>
       </ul>
     </div>
@@ -341,6 +345,46 @@
         <li>
           <p><a target="_blank" href="https://polarsparc.github.io/DeepLearning/DeepLearning-1.html"><span class="bold">Introduction
             to Deep Learning - Part 1</span></a></p>
+        </li>
+      </ul>
+    </div>
+    <div id="step-div">
+      <p>Distributed</p>
+    </div>
+    <br/>
+    <div id="para-div">
+      <ul id="blue-sqr-ul">
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/Distributed/Kafka-2.html"><span class="bold">Exploring Apache Kafka
+            - Part 2</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/Distributed/Kafka-1.html"><span class="bold">Exploring Apache Kafka
+            - Part 1</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/Distributed/RabbitMQ-3.html"><span class="bold">Quick Tour of RabbitMQ
+            - Part 3</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/Distributed/RabbitMQ-2.html"><span class="bold">Quick Tour of RabbitMQ
+            - Part 2</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/Distributed/RabbitMQ-1.html"><span class="bold">Quick Tour of RabbitMQ
+            - Part 1</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/Distributed/ZooKeeper-3.html"><span class="bold">Exploring Apache
+            ZooKeeper :: Part-3</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/Distributed/ZooKeeper-2.html"><span class="bold">Exploring Apache
+            ZooKeeper :: Part-2</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/Distributed/ZooKeeper-1.html"><span class="bold">Exploring Apache
+            ZooKeeper :: Part-1</span></a></p>
         </li>
       </ul>
     </div>
@@ -626,8 +670,16 @@
             :: Part 1</span></a></p>
         </li>
         <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/Java/Synchronization.html"><span class="bold">Multi-Thread Synchronization
+            - CountDownLatch, CyclicBarrier, & Phaser</span></a></p>
+        </li>
+        <li>
           <p><a target="_blank" href="https://polarsparc.github.io/Java/JPA.html"><span class="bold">Quick Introduction to Java Persistence
             API (JPA)</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/Java/JavaAnnotations.html"><span class="bold">Java Annotations
+            </span></a></p>
         </li>
       </ul>
     </div>
@@ -855,46 +907,6 @@
       </ul>
     </div>
     <div id="step-div">
-      <p>Messaging</p>
-    </div>
-    <br/>
-    <div id="para-div">
-      <ul id="blue-sqr-ul">
-        <li>
-          <p><a target="_blank" href="https://polarsparc.github.io/Messaging/Kafka-2.html"><span class="bold">Exploring Apache Kafka
-            - Part 2</span></a></p>
-        </li>
-        <li>
-          <p><a target="_blank" href="https://polarsparc.github.io/Messaging/Kafka-1.html"><span class="bold">Exploring Apache Kafka
-            - Part 1</span></a></p>
-        </li>
-        <li>
-          <p><a target="_blank" href="https://polarsparc.github.io/Messaging/RabbitMQ-3.html"><span class="bold">Quick Tour of RabbitMQ
-            - Part 3</span></a></p>
-        </li>
-        <li>
-          <p><a target="_blank" href="https://polarsparc.github.io/Messaging/RabbitMQ-2.html"><span class="bold">Quick Tour of RabbitMQ
-            - Part 2</span></a></p>
-        </li>
-        <li>
-          <p><a target="_blank" href="https://polarsparc.github.io/Messaging/RabbitMQ-1.html"><span class="bold">Quick Tour of RabbitMQ
-            - Part 1</span></a></p>
-        </li>
-        <li>
-          <p><a target="_blank" href="https://polarsparc.github.io/Messaging/ZooKeeper-3.html"><span class="bold">Exploring Apache
-            ZooKeeper :: Part-3</span></a></p>
-        </li>
-        <li>
-          <p><a target="_blank" href="https://polarsparc.github.io/Messaging/ZooKeeper-2.html"><span class="bold">Exploring Apache
-            ZooKeeper :: Part-2</span></a></p>
-        </li>
-        <li>
-          <p><a target="_blank" href="https://polarsparc.github.io/Messaging/ZooKeeper-1.html"><span class="bold">Exploring Apache
-            ZooKeeper :: Part-1</span></a></p>
-        </li>
-      </ul>
-    </div>
-    <div id="step-div">
       <p>MinIO</p>
     </div>
     <br/>
@@ -951,6 +963,22 @@
         <li>
           <p><a target="_blank" href="https://polarsparc.github.io/Networking/SSH-Tunnel.html"><span class="bold">SSH Tunneling Basics
             </span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/Networking/WebSockets-04.html"><span class="bold">Introduction to
+            WebSockets :: Part - 4</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/Networking/WebSockets-03.html"><span class="bold">Introduction to
+            WebSockets :: Part - 3</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/Networking/WebSockets-02.html"><span class="bold">Introduction to
+            WebSockets :: Part - 2</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/Networking/WebSockets-01.html"><span class="bold">Introduction to
+            WebSockets :: Part - 1</span></a></p>
         </li>
       </ul>
     </div>
@@ -1051,6 +1079,30 @@
         <li>
           <p><a target="_blank" href="https://polarsparc.github.io/SpringAI/PragmaticSpringAI.html"><span class="bold">Pragmatic
             Bytes on Spring AI</span></a></p>
+        </li>
+      </ul>
+    </div>
+    <div id="step-div">
+      <p>SpringFramework</p>
+    </div>
+    <br/>
+    <div id="para-div">
+      <ul id="blue-sqr-ul">
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/SpringFramework/SpringFrameworkEssentials-4.html"><span class=
+            "bold">Spring Framework Core Essentials - Part 4</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/SpringFramework/SpringFrameworkEssentials-3.html"><span class=
+            "bold">Spring Framework Core Essentials - Part 3</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/SpringFramework/SpringFrameworkEssentials-2.html"><span class=
+            "bold">Spring Framework Core Essentials - Part 2</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/SpringFramework/SpringFrameworkEssentials-1.html"><span class=
+            "bold">Spring Framework Core Essentials - Part 1</span></a></p>
         </li>
       </ul>
     </div>
