--- a/index.html
+++ b/index.html
@@ -534,8 +534,20 @@
             Mindset - An 'Aha' Moment !</span></a></p>
         </li>
         <li>
+          <p><a target="_blank" href="https://www.linkedin.com/pulse/generative-ai-starter-pack-bhaskar-swaminathan-kmybe/"><span
+            class="bold">Generative AI Starter Pack !</span></a></p>
+        </li>
+        <li>
           <p><a target="_blank" href="https://www.linkedin.com/pulse/cautionary-reminder-major-updates-prod-bhaskar-swaminathan-msbfe">
             <span class="bold">Cautionary Reminder on Major Updates to Prod !!!</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://www.linkedin.com/pulse/unpacking-mystery-behind-deep-learning-bhaskar-swaminathan-qovee">
+            <span class="bold">Unpacking the Mystery behind Deep Learning !!!</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://www.linkedin.com/pulse/celebrating-15-years-polarsparc-bhaskar-swaminathan/"><span class
+            ="bold">Celebrating 15 Years of PolarSPARC !!!</span></a></p>
         </li>
         <li>
           <p><a target="_blank" href="https://polarsparc.github.io/General/RipMiniDV.html"><span class="bold">Ripping MiniDV to
@@ -556,6 +568,42 @@
         <li>
           <p><a target="_blank" href="https://polarsparc.github.io/General/Pi-Hole.html"><span class="bold">Pi-hole using Docker on
             ODroid-C2</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://www.linkedin.com/posts/bhaskarswaminathan_have-been-engaged-with-some-talented-individuals-activity-7007401906088071168-dzU2">
+            <span class="bold">Advice to Younger Me !!!</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://www.linkedin.com/posts/bhaskarswaminathan_bubble-wrap-culture-three-weeks-back-activity-6995099830704349184-dY3E">
+            <span class="bold">Bubble Wrap Culture !!!</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://www.linkedin.com/pulse/journey-galaxy-machine-learning-bhaskar-swaminathan/"><span class
+            ="bold">Journey into the Galaxy of Machine Learning ...</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://www.linkedin.com/pulse/build-new-modernize-bhaskar-swaminathan"><span class="bold">Build
+            New or Modernize ???</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://www.linkedin.com/pulse/mythical-10x-full-stack-engineers-bhaskar-swaminathan"><span
+            class="bold">The Mythical 10x Full-Stack Engineers ...</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://www.linkedin.com/pulse/cheetah-corn-brain-bhaskar-swaminathan/"><span class="bold">The
+            'Cheetah-corn' Brain ...</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://www.linkedin.com/pulse/customer-outcome-centric-focus-bhaskar-swaminathan/"><span class
+            ="bold">Customer & Outcome Centric Focus</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://www.linkedin.com/pulse/my-life-game-dart-bhaskar-swaminathan"><span class="bold">My Life
+            ... a Game of Dart !!!</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://www.linkedin.com/pulse/path-zengineer-bhaskar-swaminathan"><span class="bold">Path to
+            ZENgineer ...</span></a></p>
         </li>
         <li>
           <p><a target="_blank" href="https://polarsparc.github.io/General/N2-Cluster.html"><span class="bold">Building a ODroid N2
