Distributed, Java, NLP

--- a/index.html
+++ b/index.html
@@ -355,6 +355,14 @@
     <div id="para-div">
       <ul id="blue-sqr-ul">
         <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/Distributed/Raft.html"><span class="bold">Raft Consensus Algorithm
+            Unraveled</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/Distributed/OpenFaaS.html"><span class="bold">Getting Started with
+            Serverless using OpenFaaS (ARM Edition)</span></a></p>
+        </li>
+        <li>
           <p><a target="_blank" href="https://polarsparc.github.io/Distributed/Kafka-2.html"><span class="bold">Exploring Apache Kafka
             - Part 2</span></a></p>
         </li>
@@ -706,6 +714,30 @@
             :: Part 4</span></a></p>
         </li>
         <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/Java/Vertx-6.html"><span class="bold">Introduction to Vert.x -
+            Part 6</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/Java/Vertx-5.html"><span class="bold">Introduction to Vert.x -
+            Part 5</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/Java/Vertx-4.html"><span class="bold">Introduction to Vert.x -
+            Part 4</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/Java/Vertx-3.html"><span class="bold">Introduction to Vert.x -
+            Part 3</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/Java/Vertx-2.html"><span class="bold">Introduction to Vert.x -
+            Part 2</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/Java/Vertx-1.html"><span class="bold">Introduction to Vert.x -
+            Part 1</span></a></p>
+        </li>
+        <li>
           <p><a target="_blank" href="https://polarsparc.github.io/Java/CompletableFuture-3.html"><span class="bold">Java CompletableFuture
             :: Part 3</span></a></p>
         </li>
@@ -724,6 +756,10 @@
         <li>
           <p><a target="_blank" href="https://polarsparc.github.io/Java/JPA.html"><span class="bold">Quick Introduction to Java Persistence
             API (JPA)</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/Java/JavaDynamicProxy.html"><span class="bold">Introduction to
+            Java Dynamic Proxy</span></a></p>
         </li>
         <li>
           <p><a target="_blank" href="https://polarsparc.github.io/Java/JavaAnnotations.html"><span class="bold">Java Annotations
@@ -1027,6 +1063,30 @@
         <li>
           <p><a target="_blank" href="https://polarsparc.github.io/Networking/WebSockets-01.html"><span class="bold">Introduction to
             WebSockets :: Part - 1</span></a></p>
+        </li>
+      </ul>
+    </div>
+    <div id="step-div">
+      <p>NLP</p>
+    </div>
+    <br/>
+    <div id="para-div">
+      <ul id="blue-sqr-ul">
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/NLP/Document-Similarity-NLP.html"><span class="bold">Document
+            Similarity using NLTK and Scikit-Learn</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/NLP/Sentiment-Analysis-NLP.html"><span class="bold">Textual Sentiment
+            Analysis using NLTK and Scikit-Learn</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/NLP/Feature-Extraction-NLP.html"><span class="bold">Feature Extraction
+            for Natural Language Processing</span></a></p>
+        </li>
+        <li>
+          <p><a target="_blank" href="https://polarsparc.github.io/NLP/Python-NLTK.html"><span class="bold">Basics of Natural Language
+            Processing using NLTK</span></a></p>
         </li>
       </ul>
     </div>
